[package]
name = "recipes_a"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53.2", features = ["tokio", "noise", "mdns", "floodsub", "tcp", "tls", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros"] }
futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"]}
pretty_env_logger = "0.5.0"
log = "0.4.21"
serde_json = "1.0.117"
